iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Oct 18 21:01:01 2024
*filter
:INPUT DROP [1572:121711]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1780:179640]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -j ACCEPT
COMMIT
# Completed on Fri Oct 18 21:01:01 2024
*nat
:PREROUTING ACCEPT [18:5954]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1627:145566]
:POSTROUTING ACCEPT [1627:145566]
COMMIT
